# repositories_extraction

./: .gitignore  README.md  docker-compose.airflow.yml  docker-compose.yml  iceberg.properties  post-init.sh  post-init.sql  pyproject.toml
airflow/dags/: extraction_from_github.py  requirements.txt
airflow/scripts/: create_curated_layer.py  extract_blob_files.py  extract_commits_details_from_github.py  extract_commits_from_github.py  extract_repos_from_github.py
airflow/scripts/sql_scripts/: create_curated_commit_change_metrics.sql  create_curated_commit_files.sql  create_curated_commits.sql
airflow/scripts/utils/: __init__.py  storage.py
data/tables/: curated_commit_change_metrics.csv  curated_commit_files.csv  curated_commits.csv  landing_repositories.csv
src/scripts/: create_curated_layer.py  extract_blob_files.py  extract_commits_details_from_github.py  extract_repos_from_github.py
src/scripts/sql_scripts/: create_curated_commit_change_metrics.sql  create_curated_commit_files.sql
